--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <img src="https://octodex.github.com/images/daftpunktocat-thomas.gif" id="octocat" alt="octocat-gif" />
 
 <!-- Change this code here by copy and pasting your template on line 15 -->
-<p>Welcome to your first GitHub Pages website!test</p>
+<p>Welcome to your first GitHub Pages website! This is my first commit... Well, 4th, but it's just practice</p>
 
 </body>
 </html>
